v3 - Recruit collection page and new Display adverts guidance page content updates

--- a/app/views/v3/employer/api/api.html
+++ b/app/views/v3/employer/api/api.html
@@ -34,7 +34,7 @@ Get started with the recruitment APIs - Manage apprentices
         <br><br>
         You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
         <br><br>
-        Your developer will be also able to try out the API using the sandbox provided.
+        Your developer will also be able to try out the API using the sandbox provided.
       </p>
       <h2 class="govuk-heading-l">Where do I access the API Key?</h2>
       <p class="govuk-body">
