--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -36,7 +36,7 @@ Recruit an apprentice - Collection - GOV.UK
           <ol class="govuk-list govuk-body-s contents">
             <li id="contents">Contents</li>
             <li>&mdash; <a href="#employers" class="govuk-link govuk-link--no-visited-state">Employers</a></li>
-            <li>&mdash; <a href="#providers" class="govuk-link govuk-link--no-visited-state">Providers</a></li>
+            <li>&mdash; <a href="#providers" class="govuk-link govuk-link--no-visited-state">Training providers</a></li>
             <li>&mdash; <a href="#recruitment-apis" class="govuk-link govuk-link--no-visited-state">Display adverts API</a></li>           
           </ol>
         </div>          
@@ -70,7 +70,7 @@ Recruit an apprentice - Collection - GOV.UK
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/employer-preventing-discrimination/recruitment">Employers: preventing discrimination</a>
                 </li>-->
               </ul>
-              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="providers">Providers</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="providers">Training providers</h2>
               <p class="govuk-body">
                 Information for training providers on how to create and manage apprenticeship vacancies, along with guidance on using our recruitment APIs. 
               </p>
