--- a/app/views/v3/guidance/display-adverts-from-faa.html
+++ b/app/views/v3/guidance/display-adverts-from-faa.html
@@ -29,6 +29,7 @@ Display adverts from Find an apprenticeship if you don’t have an Apprenticeshi
       <div class="govuk-grid-column-two-thirds contents-list">        
         <!--<span class="govuk-caption-xl gem-c-title__context">Collection</span>-->
         <h1 class="govuk-heading-xl">Display adverts from Find an apprenticeship if you don’t have an Apprenticeship service account</h1>
+        <p class="govuk-body-l">How to access the Display adverts API if you don’t have an Apprenticeship service account.</p>
       </div>
 
       <div class="govuk-grid-column-one-third">
