--- a/app/views/v3/provider/api/api.html
+++ b/app/views/v3/provider/api/api.html
@@ -34,7 +34,7 @@ Get started with the recruitment APIs - Apprenticeships
       <br><br>
       You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
       <br><br>
-      Your developer will be also able to try out the API using the sandbox provided.
+      Your developer will also be able to try out the API using the sandbox provided.
       <br><br>
       If you want to create vacancies for employers using the API you will need them to give you permission to create vacancies on their behalf, they can do this in their Apprenticeship service account. 
     </p>
