v3 - Employer not signed agreement scenario for API list screen

--- a/app/views/v3/employer/api/api-list-agreement-not-signed.html
+++ b/app/views/v3/employer/api/api-list-agreement-not-signed.html
@@ -36,9 +36,9 @@ API list - Manage apprenticeships - GOV.UK
             <span class="govuk-caption-m">Create an advert on Find an apprenticeship using your existing systems.</span>
           </td>          
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <!--<a href="api-hub" class="govuk-link govuk-link--no-visited-state">
               Get key
-            </a>    
+            </a>-->    
           </td>
         </tr>
         <tr class="govuk-table__row">
@@ -47,9 +47,9 @@ API list - Manage apprenticeships - GOV.UK
             <span class="govuk-caption-m">Test creating an advert on Find an apprenticeship using your existing systems.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <!--<a href="api-hub" class="govuk-link govuk-link--no-visited-state">
               View key
-            </a>  
+            </a>-->  
           </td>
         </tr>
       
@@ -59,9 +59,9 @@ API list - Manage apprenticeships - GOV.UK
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <!--<a href="api-hub" class="govuk-link govuk-link--no-visited-state">
               View key
-            </a>  
+            </a>-->  
           </td>
         </tr>
         <!--<tr class="govuk-table__row">
