v3 - Display adverts API guidance page content updates

--- a/app/views/v3/guidance/display-adverts-from-faa.html
+++ b/app/views/v3/guidance/display-adverts-from-faa.html
@@ -46,7 +46,7 @@ Display adverts from Find an apprenticeship if you don’t have an Apprenticeshi
           <br><br>
           You'll need someone with technical knowledge to connect your system with the API, for example a software developer. 
           <br><br>
-          Your developer will need to create an account or sign in to our developer hub to access the API key. 
+          Your developer will need to <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">create an account or sign in</a> to our developer hub to access the API key. 
           <br><br>
           Please note the RSS feed and Av live legacy tools will no longer be available from March 2022 and our new Display adverts API should be used instead.
         </p>
