v3 - Create an apprenticeship vacancy content corrections

--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -39,7 +39,7 @@ Creating an apprenticeship vacancy - Recruit an apprentice - Collection - GOV.UK
       <div class="govuk-grid-column-two-thirds mainstream-guide-content">
         <!--<h2 class="govuk-heading-m">Overview</h2>-->
         <p class="govuk-body">
-          You can create a vacancy in the <a href="https://accounts.manage-apprenticeships.service.gov.uk/" class="govuk-link govuk-link--no-visited-state">‘Recruitment’ section of your apprenticeship service account</a>. If you need to create multiple or similar adverts, you can clone them after you submit the advert.
+          You can create a vacancy in the <a href="https://accounts.manage-apprenticeships.service.gov.uk/" class="govuk-link govuk-link--no-visited-state">‘Recruitment’ section of your apprenticeship service account</a>. If you need to create multiple or similar vacancies, you can clone them after you submit the vacancy.
         </p>
         <p class="govuk-body">
           We usually approve or reject vacancies within 24 hours.
@@ -48,7 +48,7 @@ Creating an apprenticeship vacancy - Recruit an apprentice - Collection - GOV.UK
           Before you create a vacancy, learn about <a href="https://www.gov.uk/employer-preventing-discrimination/recruitment" class="govuk-link govuk-link--no-visited-state">preventing discrimination in recruitment</a>.
         </p>
         <p class="govuk-body">
-          You will need the employer to give you permission to create apprenticeship vacancies on their behalf. They may choose to review the adverts.
+          You will need the employer to give you permission to create apprenticeship vacancies on their behalf. They may choose to review the vacancies.
         </p>
 
         <h2 class="govuk-heading-m">What you'll need</h2>
@@ -68,7 +68,7 @@ Creating an apprenticeship vacancy - Recruit an apprentice - Collection - GOV.UK
         </ul>
 
         <p class="govuk-body">You can save each vacancy as a draft and edit it before you submit it to us, as well as preview how it’ll look. If the employer has chosen to review the vacancy first, you may receive changes from them, you can find these in your recruitment dashboard.<br><br>
-          We’ll give you a reference number for the advert after you submit it.
+          We’ll give you a reference number for the vacancy after you submit it.
         </p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
