v3 - Guidance page content additions

--- a/app/views/v3/guidance/providers-get-started.html
+++ b/app/views/v3/guidance/providers-get-started.html
@@ -1,7 +1,7 @@
 {% extends "layout-guidance.html" %}
 
 {% block pageTitle %}
-Get started with the recruitment APIs - Recruitment collection - GOV.UK
+Get started with the recruitment APIs as a training provider - Recruitment collection - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -24,7 +24,7 @@ Get started with the recruitment APIs - Recruitment collection - GOV.UK
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds contents-list">        
         <!--<span class="govuk-caption-xl gem-c-title__context">Collection</span>-->        
-        <h1 class="govuk-heading-xl">Get started with the recruitment APIs</h1>                
+        <h1 class="govuk-heading-xl">Get started with the recruitment APIs as a training provider</h1>                
       </div>
 
       <div class="govuk-grid-column-one-third">
@@ -54,7 +54,7 @@ Get started with the recruitment APIs - Recruitment collection - GOV.UK
           You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
         </p>
         <p class="govuk-body">
-          It can take a while to connect using an API, so leave enough time to integrate it.
+          Your developer will also be able to try out the API using the sandbox provided.
         </p>
         <h2 class="govuk-heading-l">Where do I access the API Key?</h2>
         <p class="govuk-body">
