--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -2,7 +2,7 @@
 {% extends "layout-guidance.html" %}
 
 {% block pageTitle %}
-Creating an apprenticeship vacancy - Recruit an apprentice - Collection - GOV.UK
+Creating an apprenticeship vacancy as a training provider - Recruit an apprentice - Collection - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -28,7 +28,7 @@ Creating an apprenticeship vacancy - Recruit an apprentice - Collection - GOV.UK
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds contents-list">        
         <!--<span class="govuk-caption-xl gem-c-title__context">Collection</span>-->
-        <h1 class="govuk-heading-xl">Creating an apprenticeship vacancy</h1>
+        <h1 class="govuk-heading-xl">Creating an apprenticeship vacancy as a training provider</h1>
       </div>
 
       <div class="govuk-grid-column-one-third">
