v4 - updated the date on the homepage and try to deploy again

--- a/app/views/v4/_summary.html
+++ b/app/views/v4/_summary.html
@@ -1,8 +1,8 @@
-<h2 class="govuk-heading-l" id="sprint-12">
+<h2 class="govuk-heading-l" id="sprint-4">
   <span class="govuk-tag">LATEST</span><br>
   Design sprint 4
   <span class="govuk-caption-l">
-    20th December 2021 &mdash; 11th January 2022
+    22nd December 2021 &mdash; 11th January 2022
   </span>
 </h2>
 
