v4 - updated the date on the homepage and try to deploy again

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -171,7 +171,7 @@
         },
         summary:
         {
-          html: '24th November &mdash; 17th December 2021'
+          html: '24th November &mdash; 21st December 2021'
         }
       },
       {
