--- a/app/views/v4/employer/create/task-list.html
+++ b/app/views/v4/employer/create/task-list.html
@@ -12,7 +12,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if data.reference_num %}<span class="govuk-caption-xl">{{data.reference_num}}</span>{% endif%}
+    {% if data.title %}<span class="govuk-caption-xl">{{data.title}}</span>{% endif%}
     <h1 class="govuk-heading-xl">
       Create an apprenticeship advert
     </h1>
@@ -127,11 +127,11 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 
       <li>
         <h2 class="app-task-list__section">
-          <span class="app-task-list__section-number">2.</span> Employment details
+          <span class="app-task-list__section-number">2.</span> Employment details {{data.WageType}} {{data.weekly-hours}}
           <span style="margin-left:220px;">
-            {% if data.title %}
+            {% if data.WageType and data.weekly-hours %}
             <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
+            {% if data.WageType or data.weekly-hours %}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
             {% endif %}
           </span>
@@ -155,7 +155,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              {% if data.title %}
+              {% if data.WageType %}
               <a href="duration?return_url=task-list" aria-describedby="contact-details-status">
                 Duration and working hours
               </a>
@@ -172,9 +172,13 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
+              {% if data.weekly-hours %}
               <a href="dates?return_url=task-list" aria-describedby="contact-details-status">
                 Important dates
               </a>
+              {% else %}
+                Important dates
+              {% endif %}
             </span>
             <!--{% if data.port_entry or data.port_export or data.transport_method %}
             <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
@@ -185,10 +189,14 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
+              {% if data.title %}
               <a href="location?return_url=task-list" aria-describedby="contact-details-status">
                 Where will the apprentice work?
               </a>
-            </span>
+              {% else %}
+                Where will the apprentice work?
+              {% endif %}
+            </span>            
             <!--{% if data.port_entry or data.port_export or data.transport_method %}
             <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
             {% else%}
@@ -198,9 +206,13 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
+              {% if data.title %}
               <a href="positions?return_url=task-list" aria-describedby="contact-details-status">
                 How many positions are there<!-- for this apprenticeship-->?
               </a>
+              {% else %}
+                How many positions are there?
+              {% endif %}
             </span>
             <!--{% if data.port_entry or data.port_export or data.transport_method %}
             <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
