--- a/app/views/v4/employer/create/training-select.html
+++ b/app/views/v4/employer/create/training-select.html
@@ -1,14 +1,13 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+What training will the apprentice take? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
-
 
 {% block beforeContent %}
 {{super()}}
 {% if data.journey != "new" %}
-<a href="{% if data.edit != 'yes' %}create-vacancy{%else%}../vacancy-preview?edit=no{%endif%}" class="govuk-back-link">Back</a>
+<a href="{% if data.edit != 'yes' %}title{%else%}../task-list?edit=no{%endif%}" class="govuk-back-link">Back</a>
 {% endif %}
 {% endblock %}
 
