--- a/app/views/v4/employer/create/short-description.html
+++ b/app/views/v4/employer/create/short-description.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Short description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV.UK
+Short description of the apprenticeship - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
