--- a/app/views/v4/employer/create/location.html
+++ b/app/views/v4/employer/create/location.html
@@ -1,16 +1,8 @@
 {% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
 
 {% block pageTitle %}
-Manage apprentices
+Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
-
-
-{% block beforeContent %}
-{{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
-{% endblock %}
-
-
 
 {% block content %}
 
